--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  /* border: 1px solid black; */
 }
 
 body {
@@ -32,6 +33,8 @@ main {
   text-align: center;
 }
 
+
+
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
@@ -39,15 +42,54 @@ main {
 }
 
 .die-face {
-  height: 50px;
+  /* height: 50px;
   width: 50px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  cursor: pointer; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 65px;
+  height: 65px;
+  background-color: #FFFFFF;
+  margin: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  font-size: 2rem;
+  border-radius: 8%;
+  padding: 6px;
+  place-self: center;
 }
+
+.dot{
+  background-color: black;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  place-self: center;
+}
+.top{
+  grid-row-start: 1;
+}
+.center{
+  grid-row-start: 2;
+}
+.bottom{
+  grid-row-start: 3;
+}
+.left{
+  grid-column-start: 1;
+}
+.middle{
+  grid-column-start: 2;
+}
+.right{
+  grid-column-end: -1;
+}
+
 
 .die-num {
   font-size: 2rem;
@@ -72,3 +114,63 @@ main {
 .roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+
+.count-roll{
+  font-size: 1.1rem;
+}
+
+.timer{
+  font-size: 1.1rem;
+}
+.start-menu{
+  display: flex;
+  gap: .5rem;
+  align-items: center;
+  justify-content: center;
+  margin-top: .8rem;
+}
+
+@media only screen and (max-width: 500px) {
+  main {
+    height: auto;
+  }
+  .dice-container{
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 250px;
+    max-height: 580px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .die-face{
+    margin: 5px;
+    width: 60px;
+    height: 60px;
+  }
+  .dot{
+    width: 7px;
+    height: 7px;
+  }
+  .roll-dice{
+    padding: 5px 12px;
+    font-size: 22px;
+    margin-top: 2rem;
+  }
+  .instructions{
+    font-size: 1rem;
+    margin: 0 1rem;
+  }
+  .title{
+    font-size: 2rem;
+    margin-bottom: .4rem;
+  }
+  .start-menu{
+    gap: 2rem;
+  }
+  .count-roll{
+    font-size: 1.5rem;
+  }
+  .timer{
+    font-size: 1.5rem;
+  }
+}
+
